--- a/latex computations/glmerMix Summary.tex
+++ b/latex computations/glmerMix Summary.tex
@@ -267,7 +267,7 @@ $$$$
 :=\sum_{i=1}^{n} \sum_{k=0}^{1}\pi_{ik} \log f_k(y_i) + \pi_{ik}\log \pi_k.
 $$
 
-\subsubsection{Outer MCEM}
+\subsubsection{Outer MCEM}\label{sub:outer}
 Assuming we can compute $f_k(y_i)$, we get a straight forward MCEM procedure. Assume for now that the quantities $\hat\mu_{1k},...\hat\mu_{nk}$ and $\hat\Sigma$ are given.  
 \begin{itemize}
 \item \textbf{E-Step}: For $i=1,...n$ and $k=0,1$ Sample
@@ -291,48 +291,116 @@ $$
 $$
 \hat\pi^t_k = \frac{\sum_{i=1}^{n} \pi_{ik}^t}{n},
 $$$$
-\hat\theta^t := (\hat \beta, \hat\tau,\hat\Sigma)^t =\arg\max{\theta} \sum_{i=1}^{n} \sum_{k=0}^{1} \log f_k(y_i) I\{s_{i}^{t} = k\}.
+\hat\theta^t := (\hat \beta, \hat\tau,\hat\Sigma)^t =\arg\max_{\theta} \sum_{i=1}^{n} \sum_{k=0}^{1} \log f_k(y_i) I\{s_{i}^{t} = k\}.
 $$
 \end{itemize}
 
 
 
-\subsubsection{Inner MCEM}
-The maximization part of the Outer MCEM step is in itself, a difficult optimization problem. However, it 
+\subsubsection{Inner MCEM}\label{sub:inner}
+The maximization part of the Outer MCEM step is in itself, a difficult optimization problem. However, it too, can be solved via an MCEM algorithm. For estimating random effects models, Mcculuch (1997) suggests iterating between drawing samples,
+$$
+v_{i1}^*,....,v^*_{iM}, \;\;\; i = 1,...,n,
+$$
+from the posterior distribution of $\nu_i$, and setting:
+$$
+\hat\theta^t = \arg\max_{\theta} \sum_{i=1}^{n}\sum_{m=1}^{M} \log f(y_i | \theta, \nu_{im}).
+$$
+This enables us to obtain estimates:
+$$
+\hat{\mu}_i^t = \frac{1}{M} \sum_{m=1}^{M} \nu_{im}, \;\;\;\;\;
+\hat\Sigma^t = \frac{1}{n} \sum_{i=1}^{n} \hat{\mu}_i\hat\mu_i^T.
+$$
+
+We draw samples from the posterior distribution of $\nu_i | y$ using a Metropolis Hastings algorithm. For the $i$th subject at the $t$th Metropolis-Hastings step, based on a current estimate for $\Sigma$, we sample a proposal:
+$$
+z_m \sim N(v_{m-1}, c\hat\Sigma),
+$$
+and set $v_m^* = z_m$ if:
+$$
+U(0,1) \leq \frac{f(y_i|\theta, z_m)}{f(y_i|\theta, v_{m-1})}.
+$$
+Otherwise, we set $v_m^* = v^*_{m-1}$. We tune the sampling parameter $c>0$ on the fly to obtain an acceptance rate of about $0.234$.
 
 
 
 
+\subsubsection{Putting it all together}
+In Sections \ref{sub:outer} and \ref{sub:inner} we described two MCEM algorithm that, used together, can be used to maximize the mixture of mixed GLMs model of interest. However iterating between the outer E-step and fully maximizing the likelihood in the inner EM step will likely be very computationally inefficient. Instead, we alternate between performing a single iterations of the E and S steps of the outer MCEM algorithm, and performing a single iteration of the inner MCEM. Once the algorithm converges we aggregate the estimated parameters in order to obtain a good estimate for the MLE. The heuristic is, that once we are at a vicinity of the MLE, out estimate will approximate the maximizer of the function:
+$$
+\hat\theta 
+\approx \arg\max_{\theta} \sum_{t=1}^{T} \sum_{i=1}^{n}  \sum_{k=0}^{1} f_k(y_i;\theta, v_{it}) I_{s_i^t = k}.
+$$
 
+The iterative optimization scheme follows the following steps: 
+\begin{itemize}
+\item \textbf{Outer E-Step}: For $i=1,...n$ and $k=0,1$ Sample
+$$
+v_{1k},...,v_{Mk} \sim N(\hat\mu_{ik}^{t-1}, \hat\Sigma^{t-1}),
+$$
+and set:
+$$
+w_{i0}^{t} = 
+ \left(1 + \frac{\pi_1}{\pi_0}
+\frac{\sum_{m=1}^{M} \frac{\varphi(v_{1m};0,\hat\Sigma)}{\varphi(v_{1m}; \hat\mu_{i1}, \hat\Sigma)}\prod_{j} f_1(y_{ij} ; \hat\theta^t, v_{m1})}
+{\sum_{m=1}^{M}\frac{\varphi(v_{0m};0,\hat\Sigma)}{\varphi(v_{0m}; \hat\mu_{i0}, \hat\Sigma)} \prod_{j} f_0(y_{ij} ; \hat\theta^{t}, v_{m0})} 
+\right)^{-1} 
+$$$$
+\pi_{ik}^t = \frac{(t - 1)\pi_{ik}^{t-1} + w_{ik}^{t}}{t}.
+$$
 
+\item \textbf{Outer S-Step:} Sample $s_{i}^t \sim Ber(\pi_{ik}^t)$.
+
+\item \textbf{Inner E-Step:} For $i=1,...n$, $k=0,1$:
+	\begin{itemize}
+	\item Take $M$ MH steps to obtain samples $v_{ik1}^*,...,v_{ikM}^*$
+	\item Set:
+	$$
+	\bar{v}_{ik}^{t} = \frac{1}{M} \sum_{m=1}^{M} v^*_{ikm}
+	$$$$
+	\hat\mu^{t}_{ik} = \frac{(t - 1) \hat\mu^{t-1}_{ik} + \bar{v}_{ik}^{t}}{t}
+	$$
+	\end{itemize}
+
+\item \textbf{Inner M-Step:} Set:
+$$
+\hat\pi^t_k = \frac{\sum_{i=1}^{n} \pi_{ik}^t}{n},
+$$$$
+(\tilde\beta^t, \tilde\tau^t) := \arg\max_{\tau, \beta} \sum_{i=1}^{n} \sum_{k=0}^{1} \log f_k(y_i | \beta, \tau, v^{*}_{ikM}) I\{s_{i}^{t} = k\}.
+$$$$
+\hat\beta^{t} = \frac{(t - 1) \hat\beta^{t-1} + \tilde\beta^{t}}{t}, \;\;\;\;\;\;\;\; 
+\hat\tau^{t} = \frac{(t - 1) \hat\tau^{t-1} + \tilde\tau^{t}}{t}.
+$$$$
+\hat\Sigma^{t} = \frac{1}{n}\sum_{i=1}^{n}\sum_{k=0}^{1} (\hat\mu_{ik}^t)(\hat\mu_{ik}^t)^{T} \pi_{ik}^{t}.
+$$$$
+\hat\theta^t = (\hat\beta^{t}, \hat\tau^{t}, \hat\Sigma^{t}).
+$$
+
+\item \textbf{Output:} Parameter estimates $\hat\theta^T$, random effect estimates $\hat\mu_{ik}^T$ and posterior probabilities $\pi^T_{ik}$
+\end{itemize}
 
 \begin{figure}
-\includegraphics[width=\maxwidth]{figures/multivariateGLMERrocFDR} \caption[]{ROC and FDR for multivariate analysis of the RV144 dataset. In the left plot horizontal grey lines are at $0.75$, $0.9$ and $0.95$.}
+\includegraphics[width=\maxwidth]{figures/multivaraiteROC} \caption[]{ROC and FDR plots produced by the multivariate algorithm.}
 \label{IL4}
 \end{figure}
 
-
-\begin{figure}
-\includegraphics[width=\maxwidth]{figures/Rplot05} \caption[]{Scatter plot of log-proportions with posterior probabilities form multivariate fit.}
-\label{IL4}
-\end{figure}
-
+\subsection{Analysis Results}
+Below are the covariance structure inferred from the data. The algorithm estimates the percentage of vaccines very accurately at $0.85$ (the correct one is $0.86$. I ran the analysis without the IL4+ cell subsets because it throws the analysis off a little bit- the FDR levels are still good but the power isn't as good. 
 
 % latex table generated in R 3.1.0 by xtable 1.8-2 package
-% Fri Nov  4 11:20:16 2016
+% Fri Nov 11 13:05:21 2016
 \begin{table}[ht]
 \centering
-\begin{tabular}{rrrrrrrr}
+\begin{tabular}{rrrrrrr}
   \hline
- & 1 & 2 & 3 & 4 & 5 & 6 & 7 \\ 
+ & 1 & 2 & 3 & 4 & 5 & 6 \\ 
   \hline
-4+/CD154+ & 0.93 & 0.85 & 0.43 & 0.50 & 1.03 & 0.52 & 0.64 \\ 
-  4+/IFNg+ & 0.85 & 1.07 & 0.29 & 0.57 & 0.80 & 0.35 & 0.71 \\ 
-  4+/IL17a+ & 0.43 & 0.29 & 0.76 & 0.28 & 0.84 & 0.36 & 0.40 \\ 
-  4+/IL2+ & 0.50 & 0.57 & 0.28 & 0.46 & 0.26 & 0.20 & 0.55 \\ 
-  4+/IL4+ & 1.03 & 0.80 & 0.84 & 0.26 & 4.03 & 0.82 & 0.42 \\ 
-  4+/MIP1B+ & 0.52 & 0.35 & 0.36 & 0.20 & 0.82 & 1.30 & 0.30 \\ 
-  4+/TNFa+ & 0.64 & 0.71 & 0.40 & 0.55 & 0.42 & 0.30 & 0.79 \\ 
+4+/CD154+ & 2.29 & 1.99 & 0.66 & 1.76 & 0.54 & 1.56 \\ 
+  4+/IFNg+ & 1.99 & 1.96 & 0.49 & 1.61 & 0.42 & 1.51 \\ 
+  4+/IL2+ & 0.66 & 0.49 & 0.66 & 0.40 & 0.31 & 0.50 \\ 
+  4+/IL17a+ & 1.76 & 1.61 & 0.40 & 1.54 & 0.27 & 1.37 \\ 
+  4+/MIP1B+ & 0.54 & 0.42 & 0.31 & 0.27 & 0.81 & 0.35 \\ 
+  4+/TNFa+ & 1.56 & 1.51 & 0.50 & 1.37 & 0.35 & 1.45 \\ 
    \hline
 \end{tabular}
 \caption{Covariance Between Random Effects in the RV144 Dataset - Multivariate Analysis.}
@@ -340,25 +408,104 @@ The maximization part of the Outer MCEM step is in itself, a difficult optimizat
 \end{table}
 
 % latex table generated in R 3.1.0 by xtable 1.8-2 package
-% Fri Nov  4 11:22:09 2016
+% Fri Nov 11 13:07:32 2016
 \begin{table}[ht]
 \centering
-\begin{tabular}{rrrrrrrr}
+\begin{tabular}{rrrrrrr}
   \hline
- & 1 & 2 & 3 & 4 & 5 & 6 & 7 \\ 
+ & 1 & 2 & 3 & 4 & 5 & 6 \\ 
   \hline
-4+/CD154+ & 1.00 & 0.85 & 0.51 & 0.77 & 0.53 & 0.47 & 0.75 \\ 
-  4+/IFNg+ & 0.85 & 1.00 & 0.33 & 0.81 & 0.38 & 0.30 & 0.78 \\ 
-  4+/IL17a+ & 0.51 & 0.33 & 1.00 & 0.47 & 0.48 & 0.36 & 0.52 \\ 
-  4+/IL2+ & 0.77 & 0.81 & 0.47 & 1.00 & 0.19 & 0.26 & 0.91 \\ 
-  4+/IL4+ & 0.53 & 0.38 & 0.48 & 0.19 & 1.00 & 0.36 & 0.23 \\ 
-  4+/MIP1B+ & 0.47 & 0.30 & 0.36 & 0.26 & 0.36 & 1.00 & 0.29 \\ 
-  4+/TNFa+ & 0.75 & 0.78 & 0.52 & 0.91 & 0.23 & 0.29 & 1.00 \\ 
+4+/CD154+ & 1.00 & 0.94 & 0.53 & 0.94 & 0.39 & 0.86 \\ 
+  4+/IFNg+ & 0.94 & 1.00 & 0.43 & 0.93 & 0.33 & 0.90 \\ 
+  4+/IL2+ & 0.53 & 0.43 & 1.00 & 0.39 & 0.42 & 0.51 \\ 
+  4+/IL17a+ & 0.94 & 0.93 & 0.39 & 1.00 & 0.24 & 0.92 \\ 
+  4+/MIP1B+ & 0.39 & 0.33 & 0.42 & 0.24 & 1.00 & 0.32 \\ 
+  4+/TNFa+ & 0.86 & 0.90 & 0.51 & 0.92 & 0.32 & 1.00 \\ 
    \hline
 \end{tabular}
 \caption{Correlations Between Random Effects in the RV144 Dataset - Multivariate Analysis.}
 \label{multiCorTable}
 \end{table}
+
+
+
+\begin{figure}
+\includegraphics[width=\maxwidth]{figures/multivariatescatter} \caption[]{Scatter plots with posterior probabilities as produced by the multivariate algorithm.}
+\label{IL4}
+\end{figure}
+
+
+
+
+
+
+
+\section{Modeling Subset Response}
+The framework developed so far allows for the modeling of differential response at the subject level- an approach suitable for classifying subjects as responders/non-responders. It may also be of interest to model response at the cell-subset level. Such analysis may be more appropriate for understanding which cell subsets participate in the immune response. 
+
+It is quite clear that the nested EM algorithm developed previously will not be suitable for such analysis. To see why, consider the joint modeling of a non-trivial number $k$ of cell-subsets, where for each cell subset a subject can be a responder or a non-responder. Denote by $z_{ik}$ a random variable taking the value of $1$ if the $i$th subject is a responder for the $k$th cell-subset or $0$ otherwise. We must assign each subject to a 'response cluster', where such an assignment can be represented as a binary vector of length $K$. The posterior probability of a realization of such a cluster is given by:
+\begin{equation}\label{expsum}
+P(z_{i} | y_{i}) = \frac{ f(y_i | z_{i}) P(a) }{ \sum_{ b \in \{0,1\}^{K}} f(y_i | b) P(b)},
+\end{equation}
+where $f(y_i | z_{ik})$ a is an integrated mixture density. The sum in the denominator of \eqref{expsum} is a sum over $2^{K}$ elements which may become computationally expensive even for datasets of modest size. An additional reason for why the nested-EM algorithm is an unattractive solution for estimating this model is the fact that previously, we estimated a random effect for every possible cluster assignment for each subject (there were two such assignments). In the presence of $2^K$ possible assignment this is no longer an attractive option. 
+
+Recall that for the nested-EM algorithm we sampled a cluster assignment for each subject at each iteration. This, as an alternative to estimating a regression weighted by posterior probabilities. Here, we can use posterior sampling in order to avoid computing the sum at the denominator of equation \eqref{expsum}. Under the assumption that we are able to compute the mixture density efficiently, consider the following Gibbs sampling scheme.  At the $t$th iteration, for the $k$th cell-subset, sample an assignment with probability:
+\begin{equation}\label{postGibbs}
+P(z_{ik} = 1 | y_i, z_{i,-k}) = 
+\frac{f(y_i | z_{ik} = 1, z_{-k}) P( z_{ik} = 1, z_{-k})}
+{\sum_{l=0}^{1} f(y_i | z_{ik} = l, z_{-k}) P( z_{ik} = l, z_{-k})}.
+\end{equation}
+
+The sampling scheme described in \eqref{postGibbs} is simple and could be expected to explore the space of possible assignments in a reasonably efficient manner. However, given that the number of the subjects in a vaccine study is typically smaller, it is unlikely that we will have enough information to estimate $P(z_{i})$ in a reasonable manner without assuming a model for the joint distribution of the subset-specific response. 
+
+A common model for the joint distribution of a binary random variable is the Ising model, which assumes that:
+$$
+\log P(z_i) = \sum_{k=1}^{K} z_{k} \eta_k + \sum_{k=1}^{K - 1}\sum_{l=k + 1}^{K} z_{k} z_{l} \gamma_{kl} + C,
+$$
+where $C$ is a normalizing constant. In general, the Ising model has $K + K(K-1)/2$ parameters to estimate, rather than the $2^{K}$ parameters we would have estimate otherwise. However, this number is still likely to be too large for the typical dataset of interest. As a simplified model, we can consider the following model:
+ $$
+\log P(z_i) = \sum_{k=1}^{K} z_{k} \eta_k + \sum_{k=1}^{K - 1}\sum_{l=k + 1}^{K} z_{k} z_{l} \gamma + C.
+$$
+Here, $\eta$ is a parameter vector which describes the probability of a response in each cell subset and $\gamma$ describes the dependence between the cell-subsets. To better understand the exact role $\gamma$ plays, write:
+$$
+\log P(z_{ik} = 1| z_{-k}) = z_k\eta_k + \sum_{l\neq k} z_{l} \gamma + \tilde{C}.
+$$
+That is, if $\gamma > 0$ then a response is more likely at the $k$th if a response is observed in other cell-subsets, and if $\gamma < 0$ then the converse holds. This could be a helpful model for our purposes as it is likely that a subject is a non-responder in all cell-subsets or a responder in several. Another more flexible option is to estimate a sparse graphical model via regularization.
+
+Given this model, the question remains of how to perform estimation. Here again we use a Monte-Carlo EM. In the Stochastic E-Step, for a subject $i$, we will sample from the joint posterior distribution of the random effect vector $\nu$ and the assignment vector $z$. For $l \in \{1,...,L\}$: 
+\begin{itemize}
+\item Sample random effect:
+	\begin{itemize}
+	\item Sample proposal:
+	$$
+	v_l^{t} \sim f(\nu_l | \nu_{1}^{t},..,\nu_{l-1}^{t}, \nu_{l+1}^{t-1},...,\nu_{L}^{t-1})
+	$$
+	\item  Accept with probability:
+	$$
+	\frac{f(y | \nu^{t}, z^{t})}{f(y | \nu^{t-1}, z^{t-1})} 
+	\frac{f(\nu_l^{t-1}|\nu_{-l}^{t})}{f(\nu_l^{t-1}|\nu_{-l}^{t})}
+	$$
+	\end{itemize}
+	
+\item Sample assignment from:
+$$
+z_l^{t} \sim P(z_l = 1 | y, z_{-l}^{t}, \nu^t)
+$$
+\end{itemize}
+For each subject we keep $M$ samples. At the M-Step we maximize the likelihood:
+$$
+\sum_{i=1}^{n}\sum_{m=1}^{M} \log f(y_i | \nu_i^m, z^m_i)  +
+\sum_{i=1}^{n} \sum_{m=1}^{M} \log f(\nu_i^m)
+$$$$
++ \sum_{i=1}^{n}\sum_{m=1}^{M}\sum_{l=1}^{L} \eta_l z_{il}^m
++ \sum_{i=1}^{n}\sum_{m=1}^{M}\sum_{l=1}^{L-1}\sum_{k=l+1}^{L} \eta_l z_{il}^m z_{ik}^{m} + C.
+$$
+
+
+
+
+
+
 
 
 
